--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script src="https://kit.fontawesome.com/121ca9d424.js" crossorigin="anonymous"></script>
  <ul>
  <li><a href="https://www.facebook.com/profile.php?id=100015482020328"><i class="fab fa-facebook-square"></i></a></li>
- <li><a href="https://twitter.com/ysxxn._"><i class="fab fa-twitter"></i></a></li>
- <li><a href="https://www.instagram.com/__cryosleeper__/"><i class="fab fa-instagram"></i></a></li>
+ <li><a href="https://twitter.com/__cryosleeper__"><i class="fab fa-twitter"></i></a></li>
+ <li><a href="https://www.instagram.com/ysxxn._/"><i class="fab fa-instagram"></i></a></li>
  <li><a href="https://www.youtube.com/channel/UCpBLtezFboT52_nZRsfPC_A"><i class="fab fa-youtube"></i></a></li>
  <li><a href="https://github.com/DyrateCryo"><i class="fab fa-github"></i></a></li>
 
