--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <ul>
  <li><a href="https://www.facebook.com/profile.php?id=100015482020328"><i class="fab fa-facebook-square"></i></a></li>
  <li><a href="https://twitter.com/__cryosleeper__"><i class="fab fa-twitter"></i></a></li>
- <li><a href="https://www.instagram.com/ysxxn._/"><i class="fab fa-instagram"></i></a></li>
+ <li><a href="https://instagram.com/ysxxn._?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D"><i class="fab fa-instagram"></i></a></li>
  <li><a href="https://www.youtube.com/channel/UCpBLtezFboT52_nZRsfPC_A"><i class="fab fa-youtube"></i></a></li>
  <li><a href="https://github.com/DyrateCryo"><i class="fab fa-github"></i></a></li>
 
